# smallpt-optix

./: .gitignore
phase0/: CMakeLists.txt  bench.ps1  build.ps1  smallpt.cpp
phase1/: CMakeLists.txt  run_phase1_benchmark.ps1  run_phase1_nsight.ps1
phase1/src/: geometry.cuh  imageio.hpp  kernel.cu  math.hpp  sampling.cuh  specular.cuh  sphere.hpp  vector.hpp
phase2/: CMakeLists.txt  plan.md  primary_hit_viz.py  run_phase2_benchmark.ps1  scene.h  select_scene.ps1
phase2/docs/: STATUS.md  phase2_handoff.md
phase2/scenes/: scene.h  scene_default.h
phase2/src/: main.cpp  scene.h  shaders.cu  shared.h
phase3/: CMakeLists.txt  run_nsight.ps1  run_phase3_benchmark.ps1  run_tile_sweep.ps1  scene.h  select_scene.ps1
phase3/correctness/: check_render_invariants.py  render_regression.py  run_correctness.ps1  ssim_compare.py
phase3/docs/: optimization_plan.md  optimization_plan_v3.md
phase3/files/: main.cpp  optimization_plan_v2.md  run_nsight.ps1  run_phase3_benchmark.ps1  scene_default.h  shaders.cu  shared.h
phase3/scenes/: scene_default.h
phase3/scripts/: build_charts.py  build_tile_sweep_chart.py  fix_nsight_summary.py  run_nsight.ps1
phase3/src/: main.cpp  shaders.cu  shared.h
